Correct the copyright notice in the footer
The copyright reads "contributors to Hyperledger Grid", which was
a past community decision. Files have more specific copyrights headers.

Signed-off-by: Shawn T. Amundson <amundson@bitwise.io>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,5 +8,5 @@
   <div>
       <a href="https://github.com/hyperledger/grid">Github</a>
   </div>
-  <a> Copyright 2018-2020 Cargill Incorporated </a>
+  Copyright &copy; 2015-2020 contributors to Hyperledger Grid
 </div>
